tests/suite/fail/regression/fuzz/fuzz_garbage_50.ny
fn main() { let x = @50 } //~ ERROR
